# visdrones

./: .gitignore  inference.py  inference_vid.py  plots.ipynb  predict.py  pyproject.toml  val.py  yolo_visdrone.py
